--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,14 +43,18 @@ dist.jar=${dist.dir}/FOPM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Arcade_Factions_Hub.zip=C:\\Users\\Sony\\Downloads\\Arcade_Factions_Hub.zip
 file.reference.BarAPI.jar=C:\\Users\\Sony\\Downloads\\BarAPI.jar
 file.reference.BukkitTelnet.jar=C:\\Users\\Sony\\Downloads\\BukkitTelnet.jar
 file.reference.BukkitTelnetClient-C.jar=C:\\Users\\Sony\\Downloads\\BukkitTelnetClient-C.jar
+file.reference.BukkitTelnetv4.2.jar=C:\\Users\\Sony\\Downloads\\BukkitTelnetv4.2.jar
 file.reference.CamUtils.jar=C:\\Users\\Sony\\Downloads\\CamUtils.jar
 file.reference.Chairs-1.4.jar=C:\\Users\\Sony\\Downloads\\Chairs-1.4.jar
 file.reference.Clearlag.jar=C:\\Users\\Sony\\Downloads\\Clearlag.jar
+file.reference.ColoredSigns.jar=C:\\Users\\Sony\\Downloads\\ColoredSigns.jar
 file.reference.CoreProtect_2.10.0.jar=C:\\Users\\Sony\\Downloads\\CoreProtect_2.10.0.jar
 file.reference.craftbukkit-devBuild3116.jar=C:\\Users\\Sony\\Downloads\\craftbukkit-devBuild3116.jar
+file.reference.craftbukkit-devBuild3116__1_.jar=C:\\Users\\Sony\\Downloads\\craftbukkit-devBuild3116 (1).jar
 file.reference.DisguiseCraft.jar=C:\\Users\\Sony\\Downloads\\DisguiseCraft.jar
 file.reference.Downloads-CreativeFreedomMOd=C:\\Users\\Sony\\Downloads\\CreativeFreedomMOd
 file.reference.Emoticons_V3.jar=C:\\Users\\Sony\\Downloads\\Emoticons_V3.jar
@@ -64,7 +68,9 @@ file.reference.FreedomTelnetClient-2.0.5.jar=C:\\Users\\Sony\\Downloads\\Freedom
 file.reference.LoopFreedomMod.jar=C:\\Users\\Sony\\Downloads\\LoopFreedomMod.jar
 file.reference.marriage.jar=C:\\Users\\Sony\\Downloads\\marriage.jar
 file.reference.Marriage__1_.jar=C:\\Users\\Sony\\Downloads\\Marriage (1).jar
+file.reference.RubyFreedomMod_V.08.jar=C:\\Users\\Sony\\Downloads\\RubyFreedomMod_V.08.jar
 file.reference.spigot-1.7.9-R0.3-SNAPSHOTBuild1543.jar=C:\\Users\\Sony\\Downloads\\spigot-1.7.9-R0.3-SNAPSHOTBuild1543.jar
+file.reference.TF-WorldEdit-5.6.2.zip=C:\\Users\\Sony\\Downloads\\TF-WorldEdit-5.6.2.zip
 file.reference.TotalFreedomMod.jar=C:\\Users\\Sony\\Downloads\\TotalFreedomMod.jar
 file.reference.WorldEdit.jar=C:\\Users\\Sony\\Downloads\\WorldEdit.jar
 includes=**
@@ -102,7 +108,13 @@ javac.classpath=\
     ${file.reference.WorldEdit.jar}:\
     ${file.reference.craftbukkit-devBuild3116.jar}:\
     ${file.reference.marriage.jar}:\
-    ${file.reference.spigot-1.7.9-R0.3-SNAPSHOTBuild1543.jar}
+    ${file.reference.spigot-1.7.9-R0.3-SNAPSHOTBuild1543.jar}:\
+    ${file.reference.Arcade_Factions_Hub.zip}:\
+    ${file.reference.BukkitTelnetv4.2.jar}:\
+    ${file.reference.ColoredSigns.jar}:\
+    ${file.reference.RubyFreedomMod_V.08.jar}:\
+    ${file.reference.TF-WorldEdit-5.6.2.zip}:\
+    ${file.reference.craftbukkit-devBuild3116__1_.jar}
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
